--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+*.bin filter=lfs diff=lfs merge=lfs -text
+*.sqlite3 filter=lfs diff=lfs merge=lfs -text
+*.pickle filter=lfs diff=lfs merge=lfs -text
 legal_chroma_db/**/*.bin filter=lfs diff=lfs merge=lfs -text
 legal_chroma_db/**/*.sqlite3 filter=lfs diff=lfs merge=lfs -text
 legal_chroma_db/**/*.pickle filter=lfs diff=lfs merge=lfs -text
