--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ fastapi
 uvicorn
 langchain
 langchain-community
+langchain-core
+langchain-text-splitters
 chromadb==1.3.5
 sentence-transformers
 pydantic
